fix: update java syntax for running this project with JDK 17